// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders when incorrect badgePermission is set 1`] = `
<Avatar
  alt="User avatar"
  badge="someIncorrectBadgePermission"
>
  <div
    className="wds-avatar"
  >
    <AvatarImage
      alt="User avatar"
    >
      <_default
        className="wds-avatar__image"
        title="wds-avatar__image"
      >
        <div
          className="wds-avatar__image"
          title="wds-avatar__image"
        />
      </_default>
    </AvatarImage>
    <Badge
      badge="someIncorrectBadgePermission"
    />
  </div>
</Avatar>
`;

exports[`Avatar renders with badge 1`] = `
<Avatar
  alt="User avatar"
  badge="admin"
>
  <div
    className="wds-avatar"
  >
    <AvatarImage
      alt="User avatar"
    >
      <_default
        className="wds-avatar__image"
        title="wds-avatar__image"
      >
        <div
          className="wds-avatar__image"
          title="wds-avatar__image"
        />
      </_default>
    </AvatarImage>
    <Badge
      badge="admin"
    >
      <span
        className="wds-avatar__badge"
        title="Community Admin"
      >
        <_default>
          <div />
        </_default>
      </span>
    </Badge>
  </div>
</Avatar>
`;

exports[`Avatar renders with default props 1`] = `
<Avatar
  alt="User avatar"
>
  <div
    className="wds-avatar"
  >
    <AvatarImage
      alt="User avatar"
    >
      <_default
        className="wds-avatar__image"
        title="wds-avatar__image"
      >
        <div
          className="wds-avatar__image"
          title="wds-avatar__image"
        />
      </_default>
    </AvatarImage>
  </div>
</Avatar>
`;

exports[`Avatar renders with props 1`] = `
<Avatar
  alt="alt"
  badge="admin"
  className="class-name"
  href="href"
  src="src"
  title="title"
>
  <div
    className="wds-avatar class-name"
    title="title"
  >
    <a
      href="href"
    >
      <AvatarImage
        alt="alt"
        src="src"
      >
        <img
          alt="alt"
          className="wds-avatar__image"
          src="src"
          title="alt"
        />
      </AvatarImage>
    </a>
    <Badge
      badge="admin"
    >
      <span
        className="wds-avatar__badge"
        title="Community Admin"
      >
        <_default>
          <div />
        </_default>
      </span>
    </Badge>
  </div>
</Avatar>
`;
